--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "check": "biome check .",
     "check:fix": "biome check --write .",
     "test": "vscode-test",
+    "test:update-snapshots": "UPDATE_SNAPSHOTS=true vscode-test",
     "package": "vsce package"
   },
   "devDependencies": {
