--- a/package.json
+++ b/package.json
@@ -46,9 +46,10 @@
   },
   "scripts": {
     "vscode:prepublish": "pnpm run compile",
+    "build-parser": "go build -o ./out/parser/go-outline-parser ./parser/main.go",
     "compile": "tsc -p ./ && cp -r src/test/fixtures out/test/",
     "watch": "tsc -watch -p ./",
-    "pretest": "pnpm run compile && pnpm run check",
+    "pretest": "pnpm run build-parser && pnpm run compile && pnpm run check",
     "lint": "biome lint src",
     "lint:fix": "biome lint --write src",
     "format": "biome format --write .",
@@ -56,7 +57,8 @@
     "check:fix": "biome check --write .",
     "test": "vscode-test",
     "test:update-snapshots": "UPDATE_SNAPSHOTS=true vscode-test",
-    "package": "vsce package"
+    "package": "vsce package",
+    "clean": "rm -rf out"
   },
   "devDependencies": {
     "@biomejs/biome": "^2.0.4",
