--- a/package.json
+++ b/package.json
@@ -45,20 +45,29 @@
     }
   },
   "scripts": {
-    "vscode:prepublish": "pnpm run compile",
-    "build-parser": "go build -o ./out/parser ./parser/main.go",
+    "clean": "rm -rf out bin",
+    "build-go": "CGO_ENABLED=0 go build -ldflags='-s -w' -o ./bin/parser${EXT} ./parser",
+    "build-go:darwin-arm64": "EXT= GOOS=darwin GOARCH=arm64 pnpm run build-go",
+    "build-go:linux-arm64": "EXT= GOOS=linux GOARCH=arm64 pnpm run build-go",
+    "build-go:linux-x64": "EXT= GOOS=linux GOARCH=amd64 pnpm run build-go",
+    "build-go:win32-arm64": "EXT=.exe GOOS=windows GOARCH=arm64 pnpm run build-go",
+    "build-go:win32-x64": "EXT=.exe GOOS=windows GOARCH=amd64 pnpm run build-go",
     "compile": "tsc -p ./ && cp -r src/test/testdata out/test/",
     "watch": "tsc -watch -p ./",
-    "pretest": "pnpm run build-parser && pnpm run compile && pnpm run check",
-    "lint": "biome lint src",
-    "lint:fix": "biome lint --write src",
+    "lint": "biome lint .",
+    "lint:fix": "biome lint --write .",
     "format": "biome format --write .",
     "check": "biome check .",
     "check:fix": "biome check --write .",
+    "pretest": "pnpm run clean && pnpm run build-go && pnpm run compile",
     "test": "vscode-test",
     "test:update-snapshots": "UPDATE_SNAPSHOTS=true pnpm run test",
     "package": "vsce package",
-    "clean": "rm -rf out"
+    "package:darwin-arm64": "pnpm run package --target darwin-arm64",
+    "package:linux-arm64": "pnpm run package --target linux-arm64",
+    "package:linux-x64": "pnpm run package --target linux-x64",
+    "package:win32-arm64": "pnpm run package --target win32-arm64",
+    "package:win32-x64": "pnpm run package --target win32-x64"
   },
   "devDependencies": {
     "@biomejs/biome": "^2.0.4",
