--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -25,6 +25,8 @@ jobs:
             npm_config_arch: x64
     name: Build ${{ matrix.target }}
     runs-on: ${{ matrix.os }}
+    env:
+      TARGET: ${{ matrix.target }}
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
       - uses: actions/setup-go@d35c59abb061a4a6fb18e82ac0862c26744d6ab5 # v5.5.0
@@ -38,9 +40,13 @@ jobs:
       - run: pnpm install
         env:
           npm_config_arch: ${{ matrix.npm_config_arch }}
-      - run: pnpm run build:ci
-        env:
-          TARGET: ${{ matrix.target }}
+      - if: runner.os == 'macOS'
+        run: pnpm run build:ci
+      - if: runner.os == 'Linux'
+        run: xvfb-run -a pnpm run build:ci
+      - if: runner.os == 'Windows'
+        run: pnpm run build:ci
+        shell: bash
       - uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4.6.2
         with:
           name: ${{ matrix.target }}
