--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -31,6 +31,7 @@ jobs:
         with:
           node-version-file: package.json
           cache: pnpm
+      - run: pnpm install
       - run: pnpm run check
 
   test-vscode:
@@ -55,6 +56,8 @@ jobs:
             os: windows-latest
             npm_config_arch: x64
     runs-on: ${{ matrix.os }}
+    env:
+      TARGET: ${{ matrix.target }}
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
       - uses: actions/setup-go@d35c59abb061a4a6fb18e82ac0862c26744d6ab5 # v5.5.0
@@ -68,6 +71,10 @@ jobs:
       - run: pnpm install
         env:
           npm_config_arch: ${{ matrix.npm_config_arch }}
-      - run: pnpm run test:ci
-        env:
-          TARGET: ${{ matrix.target }}
+      - if: runner.os == 'macOS'
+        run: pnpm run test:ci
+      - if: runner.os == 'Linux'
+        run: xvfb-run -a pnpm run test:ci
+      - if: runner.os == 'Windows'
+        run: pnpm run test:ci
+        shell: bash
