--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,7 +5,7 @@ updates:
     schedule:
       interval: weekly
       day: monday
-      time: 05:00
+      time: "05:00"
       timezone: Asia/Tokyo
     groups:
       dev-dependencies:
@@ -17,7 +17,7 @@ updates:
     schedule:
       interval: weekly
       day: monday
-      time: 05:00
+      time: "05:00"
       timezone: Asia/Tokyo
     groups:
       dependencies:
@@ -29,5 +29,5 @@ updates:
     schedule:
       interval: weekly
       day: monday
-      time: 05:00
+      time: "05:00"
       timezone: Asia/Tokyo
