--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -40,12 +40,10 @@ jobs:
       - run: pnpm install
         env:
           npm_config_arch: ${{ matrix.npm_config_arch }}
-      - if: runner.os == 'macOS'
-        run: pnpm run build:ci
-      - if: runner.os == 'Linux'
-        run: xvfb-run -a pnpm run build:ci
+      - if: runner.os != 'Windows'
+        run: pnpm run build:ci:${{ matrix.target }}
       - if: runner.os == 'Windows'
-        run: pnpm run build:ci
+        run: pnpm run build:ci:${{ matrix.target }}
         shell: bash
       - uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4.6.2
         with:
