--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -9,24 +9,17 @@ jobs:
       matrix:
         include:
           - target: linux-arm64
-            os: ubuntu-latest
             npm_config_arch: arm64
           - target: linux-x64
-            os: ubuntu-latest
             npm_config_arch: x64
           - target: darwin-arm64
-            os: macos-latest
             npm_config_arch: arm64
           - target: win32-arm64
-            os: windows-latest
             npm_config_arch: arm
           - target: win32-x64
-            os: windows-latest
             npm_config_arch: x64
     name: Build ${{ matrix.target }}
-    runs-on: ${{ matrix.os }}
-    env:
-      TARGET: ${{ matrix.target }}
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
       - uses: actions/setup-go@d35c59abb061a4a6fb18e82ac0862c26744d6ab5 # v5.5.0
@@ -40,11 +33,7 @@ jobs:
       - run: pnpm install
         env:
           npm_config_arch: ${{ matrix.npm_config_arch }}
-      - if: runner.os != 'Windows'
-        run: pnpm run build:ci:${{ matrix.target }}
-      - if: runner.os == 'Windows'
-        run: pnpm run build:ci:${{ matrix.target }}
-        shell: bash
+      - run: pnpm run build:ci:${{ matrix.target }}
       - uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4.6.2
         with:
           name: ${{ matrix.target }}
