remove npm_config_arch env

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -7,18 +7,12 @@ jobs:
   build:
     strategy:
       matrix:
-        include:
-          - target: linux-arm64
-            npm_config_arch: arm64
-          - target: linux-x64
-            npm_config_arch: x64
-          - target: darwin-arm64
-            npm_config_arch: arm64
-          - target: win32-arm64
-            npm_config_arch: arm
-          - target: win32-x64
-            npm_config_arch: x64
-    name: Build ${{ matrix.target }}
+        target:
+          - linux-arm64
+          - linux-x64
+          - darwin-arm64
+          - win32-arm64
+          - win32-x64
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
@@ -31,8 +25,6 @@ jobs:
           node-version-file: package.json
           cache: pnpm
       - run: pnpm install
-        env:
-          npm_config_arch: ${{ matrix.npm_config_arch }}
       - run: pnpm run build:ci:${{ matrix.target }}
       - uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4.6.2
         with:
