--- a/package.json
+++ b/package.json
@@ -70,7 +70,10 @@
     "build:ci:linux-arm64": "GOOS=linux GOARCH=arm64 TARGET=linux-arm64 pnpm run build",
     "build:ci:linux-x64": "GOOS=linux GOARCH=amd64 TARGET=linux-x64 pnpm run build",
     "build:ci:win32-arm64": "GOOS=windows GOARCH=arm64 TARGET=win32-arm64 pnpm run build",
-    "build:ci:win32-x64": "GOOS=windows GOARCH=amd64 TARGET=win32-x64 pnpm run build"
+    "build:ci:win32-x64": "GOOS=windows GOARCH=amd64 TARGET=win32-x64 pnpm run build",
+    "download-artifacts": "gh run download $(gh run list -c ${TARGET_COMMIT_SHA} --workflow=ci.yaml --status=success --limit=1 --json databaseId --jq '.[0].databaseId') --dir dist",
+    "publish:vsce": "vsce publish --packagePath dist/**/*.vsix",
+    "publish:ovsx": "ovsx publish --packagePath dist/**/*.vsix"
   },
   "devDependencies": {
     "@biomejs/biome": "^2.0.6",
