--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "@vscode/test-electron": "^2.5.2",
     "@vscode/vsce": "^3.6.2",
     "diff-match-patch": "^1.0.5",
+    "ovsx": "^0.10.6",
     "picocolors": "^1.1.1",
     "typescript": "^5.9.3"
   }
